Use more records, more general cleanup